# vidoctor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  mise.toml  pyproject.toml
.streamlit/: config.toml
scripts/: README.md  content_gap_eval.py  cps_eval.py  dead_zone_eval.py  eval_all.py  filler_eval.py  gaze_eval.py  mlflow_ui.sh  smoke_run.py
src/vidoctor/: __init__.py  config.py  errors.py  llm.py  log_setup.py  repository.py  suggestions.py
src/vidoctor/api/: __init__.py  app.py  youtube.py
src/vidoctor/audio/: __init__.py  cps.py  filler.py  pitch.py  transcribe.py
src/vidoctor/eval/: __init__.py  _script_lib.py  labels.py  metrics.py  runner.py
src/vidoctor/graph/: __init__.py  nodes.py  pipeline.py  state.py
src/vidoctor/ui/: app.py
src/vidoctor/vision/: __init__.py  _capture.py  category_classifier.py  content_gap.py  dead_zone.py  gaze.py
supabase/migrations/: 0001_init.sql  0002_drop_videos_storage_bucket.sql  0003_suggestion_finding_refs.sql  0004_drop_severity_priority.sql  0005_add_invariant_checks.sql
tests/: _helpers.py  test_audio.py  test_content_gap.py  test_cps.py  test_dead_zone.py  test_eval.py  test_filler.py  test_gaze.py  test_graph.py  test_llm.py  test_repository.py  test_script_lib.py  test_smoke.py  test_suggestions.py
web/: .env.production.example  next.config.ts  package-lock.json  package.json  postcss.config.mjs
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AnalyzingView.tsx  Dropzone.tsx  ErrorBanner.tsx  IdleForm.tsx  Pipeline.tsx  ResultHeader.tsx  ResultView.tsx  Sidebar.tsx
web/lib/: api.ts  format.ts  sse.ts
