[project]
name = "vidoctor"
version = "0.1.0"
description = "AI 영상 감수 에이전트 — 5차원 분석 (filler / CPS / dead zone / gaze / content gap)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.50.0",
    "streamlit>=1.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.10.0",
    "langfuse>=2.50.0",
    "whisperx>=3.8.5",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "pyright>=1.1.380",
    "pytest-asyncio>=1.3.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vidoctor"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # pyannote.audio가 torchcodec 로드 실패 시 경고 — fallback 동작하므로 무시
    "ignore::UserWarning:pyannote.audio.core.io",
]
